--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "zation-core-errors": "1.2.1",
     "zation-core-events": "1.0.1",
     "ziron-engine": "0.3.6",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "typescript": "^3.7.5",
