--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "url": "https://github.com/ZironServer/ziron-ts-client.git"
   },
   "author": {
-    "name": "Luca Scaringella",
-    "email": "lucacode1@gmail.com",
-    "url": "https://luca.scaringella.de"
+    "name": "Ing. Luca Gian Scaringella",
+    "email": "lucacode1@gmail.com"
   },
   "dependencies": {
     "emitix": "^1.2.0",
