--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "dependencies": {
     "emitix": "^2.0.0",
     "@types/node": "^13.7.6",
-    "ws": "^8.4.0",
     "@types/ws": "^8.2.2",
     "ziron-errors": "1.4.0",
     "ziron-events": "1.4.0",
     "ziron-engine": "2.1.0",
     "buffer": "^6.0.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "ws": "^8.4.0"
+  },
+  "browser": {
+    "ws": "./dist/lib/core/BrowserWs.js"
   },
   "devDependencies": {
     "typescript": "^3.7.5",
