--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ziron-client",
-  "version": "9.8.0",
+  "version": "9.9.0",
   "description": "Ziron client",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,6 +42,11 @@
     "ts-node": "^8.0.3",
     "mocha": "7.0.1",
     "@types/mocha": "^7.0.2"
+  },
+  "overrides": {
+    "gulp-typescript": {
+      "source-map": "0.7.4"
+    }
   },
   "scripts": {
     "build": "gulp build",
